src/test/deca/syntax/valid/inst.deca
// Description :
//   test pour liste d'instructions 

// Résultats : 
//   Ok

{
print();
print("hello");
print("bye");
}