src/test/deca/syntax/invalid/inst2.deca
// Description :
//   test pour insctruction

// Résultats :
//   Erreur syntaxique
//   Ligne 9 : mismatched input 'print' expecting ')'

{
print(print("hello"));
}
